# taxflow

./: .gitignore  README.md  justfile  pyproject.toml
.zed/: debug.json
app/: cli.py  config.py  enums.py  interfaces.py  logging.py  main.py
app/db/: load_templates.py  models.py  session.py
app/etl/: base.py  standardize.py
app/etl/loaders/: grand_totals.py  gs_divbu_charges.py  gs_divbu_model.py  otp_segmented_pnl.py  rnd_service.py  royalties.py
app/handlers/: __init__.py  admin_handler.py  base.py  cogs_handler.py  filters.py  gsdivbu_handler.py  manual_sar_adjustment_handler.py  other_expense_handler.py  other_income_handler.py  recalculate_totals_handler.py  rnd_handler.py  royalty_handler.py  sales_marketing_handler.py  unusual_items_handler.py  va_inventory_handler.py  variance_handler.py
app/pipelines/: __init__.py  base.py  complex.py  context.py  cost_adjustment_pipeline.py  factory.py  single_economic_activity.py
tests/: conftest.py  test_config.py  test_enums.py
tests/db/: test_db_session.py  test_load_templates.py  test_models.py
tests/etl/: test_base_etl.py  test_loaders.py  test_standardize.py
tests/handlers/: test_filters.py
tests/pipelines/: test_factory.py
